force-app/main/default/objects/complaints__c/complaints__c.object-meta.xml
<CustomObject>
    <label>complaints</label>
    <nameField>
        <label>complaints Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>complaints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>