force-app/main/default/objects/complaints__c/fields/Complaint_Age__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Age__c</fullName>
    <label>Complaint Age</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>