force-app/main/default/objects/complaints__c/fields/Complaint_Number__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Number__c</fullName>
    <label>Complaint Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>