force-app/main/default/objects/complaints__c/fields/origin__c.field-meta.xml
<CustomField>
    <fullName>origin__c</fullName>
    <label>origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E-Mail</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>