force-app/main/default/objects/complaints__c/fields/Show__c.field-meta.xml
<CustomField>
    <fullName>Show__c</fullName>
    <label>Show</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sports complaints</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>