force-app/main/default/objects/complaints__c/fields/TV_channel__c.field-meta.xml
<CustomField>
    <fullName>TV_channel__c</fullName>
    <label>TV channel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sports</fullName>
            </value>
            <value>
                <fullName>Entertainment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>