force-app/main/default/objects/complaints__c/recordTypes/Sport.recordType-meta.xml
<RecordType>
    <fullName>Sport</fullName>
    <active>true</active>
    <label>Sport</label>
</RecordType>